--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,11 +2,10 @@
     "manifest_version": 2,
     "name": "Selectize",
     "description": "セレクトボックスを検索できるようにします",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "permissions": [
-      "http://*/*",
-      "https://*/*",
       "storage",
+      "activeTab",
       "tabs"
     ],
     "background": {
