--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,11 +2,15 @@
     "manifest_version": 2,
     "name": "Selectize",
     "description": "セレクトボックスを検索できるようにします",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "permissions": [
       "storage",
       "activeTab",
       "tabs"
+    ],
+    "optional_permissions": [
+      "http://*/",
+      "https://*/"
     ],
     "background": {
       "scripts": [
