--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-selectize",
+  "name": "chrome-dropdown-filter",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
