--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "Selectize",
-    "description": "セレクトボックスを検索できるようにします",
+    "name": "Dropdown Filter",
+    "description": "ドロップダウンメニューを素早く選択できるようにします",
     "version": "0.2.1",
     "permissions": [
       "storage",
