chore: tabs 権限を削除

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,11 +2,10 @@
     "manifest_version": 2,
     "name": "Dropdown Filter",
     "description": "ドロップダウンメニューを素早く選択できるようになります",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "permissions": [
       "storage",
-      "activeTab",
-      "tabs"
+      "activeTab"
     ],
     "optional_permissions": [
       "http://*/",
